--- a/searx/static/themes/oscar/less/logicodev/search.less
+++ b/searx/static/themes/oscar/less/logicodev/search.less
@@ -1,18 +1,23 @@
 .search_categories, #categories {
   text-transform: capitalize;
   margin-bottom: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  align-content: stretch;
 
   label, .input-group-addon {
+    flex-grow: 1;
+    flex-basis: auto;
     font-size: 1.2rem;
-    font-weight:normal;
+    font-weight: normal;
     background-color: white;
     border: @mild-gray 1px solid;
     border-right: none;
     color: @dark-gray;
     padding-bottom: 0.4rem;
     padding-top: 0.4rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    text-align: center;
   }
   label:last-child, .input-group-addon:last-child {
       border-right: @mild-gray 1px solid;
@@ -20,7 +25,7 @@
 
   input[type="checkbox"]:checked + label {
     color: @black;
-    font-weight:bold;
+    font-weight: bold;
     border-bottom: @light-green 5px solid;
   }
 }
