--- a/searx/static/themes/oscar/less/pointhi/advanced.less
+++ b/searx/static/themes/oscar/less/pointhi/advanced.less
@@ -1,7 +1,8 @@
 #advanced-search-container {
-    display:none;
-    text-align:center;
-    margin-bottom:1rem;
+    display: none;
+    text-align: center;
+    margin-bottom: 1rem;
+    clear: both;
 
     label, .input-group-addon {
         font-size: 1.3rem;
@@ -11,7 +12,6 @@
         border-right: none;
         color: #333;
         padding-bottom: 0.8rem;
-        padding-top: 0.8rem;
         padding-left: 1.2rem;
         padding-right: 1.2rem;
     }
@@ -19,14 +19,14 @@
     label:last-child, .input-group-addon:last-child {
         border-right: #DDD 1px solid;
     }
-    
+
     input[type="radio"] {
         display: none;
     }
-    
-    input[type="radio"]:checked + label{
+
+    input[type="radio"]:checked + label {
         color: black;
-        font-weight:bold;
+        font-weight: bold;
         background-color: #EEE;
     }
 }
@@ -36,10 +36,11 @@
 }
 
 #check-advanced:checked ~ #advanced-search-container {
-    display:block;
+    display: block;
 }
 
 .advanced {
-    margin-top:1rem;
-    text-align:right;
+    padding: 0;
+    margin-top: 0.3rem;
+    text-align: right;
 }
